--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,20 +1,5 @@
-<md-list>
-  <md-list-item>
-    <div>firstname</div>
-    <div>lastname</div>
-    <div>age</div>
-    <div>address</div>
-    <div>Operations</div>
-  </md-list-item>
-
-    <md-list-item *ngFor="let contact of contacts;" (click)="selectContact(contact)">
-        <div>{{ contact.firstName }}</div>
-        <div>{{ contact.lastName }}</div>
-        <div>{{ contact.age }}</div>
-        <div>{{ contact.address }}</div>
-        <div>
-          <button md-button (click)="editContact(contact)">Edit</button>
-          <button md-button (click)="deleteContact(contact)">Delete</button>
-        </div>
-    </md-list-item>
-  </md-list>
+<div fxLayout="row" fxLayoutWrap>
+    <contact-list-item *ngFor="let contact of contacts;"
+                     [contact]="contact"
+                     (click)="selectContact(contact)"></contact-list-item>
+</div>
