--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,9 +5,8 @@
   height: 100%;
 }
 
-
 .add-button {
-  position: absolute;
+  position: fixed;
   right: 20px;
-  bottom: 10px;
+  bottom: 15px;
 }
