--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,5 +1,12 @@
-<div fxLayout="column" fxLayoutAlign="space-between center">
-    <contact-list-item *ngFor="let contact of contacts;"
-                     [contact]="contact"
-                     (click)="selectContact(contact)"></contact-list-item>
+<div fxLayout="column" fxLayoutAlign="space-between center"  *ngIf="contacts.length > 1">
+    <contact-list-item
+      *ngFor="let contact of contacts;"
+        [contact]="contact"
+        [edit]="editContact"
+        [remove]="removeContact"
+        [showOnMap]="showContactOnMap"
+        (click)="selectContact(contact)"></contact-list-item>
+   <div *ngIf="i < contacts.length-1">
+    <br>
+  </div>
 </div>
