--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
                 (editContact)="onEditContact($event)"
                 (select)="selectContact($event)"></contact-list>
 
-  <button md-fab class="add-button" (click)="contactDialog($event)">
+  <button md-fab class="add-button"
+          (click)="contactDialog($event)">
     <md-icon>add</md-icon>
   </button>
 </div>
