--- a/src/app/contact/contact-list/contact-list-item.component.html
+++ b/src/app/contact/contact-list/contact-list-item.component.html
@@ -1,13 +1,14 @@
-<md-card class="contact">
+<md-card class="contact" [@flyInOut]>
   <md-card-header class="contact-header"  [style.background-color]="contact.cardColor">
     <md-card-title class="contact-name">{{ contact.firstName }} {{ contact.lastName }}</md-card-title>
     <md-card-subtitle class="contact-age" *ngIf="contact.age">{{ contact.age }}</md-card-subtitle>
   </md-card-header>
   <div *ngIf="contact.address">
-    <md-card-content class="contact-content"  [style.background-color]="contact.cardColor">
+    <md-card-content class="contact-content" [style.background-color]="contact.cardColor">
        <div class="contact-address">{{ contact.address }}</div>
     </md-card-content>
-    <img md-card-image [src]="mapsImage()"  class="header-image">
+    <maps-image [address]="contact.address"  *ngIf="contact.address.addressValid"></maps-image>
+
   </div>
 
   <md-card-actions align="start" class="contact-buttons">
