--- a/src/app/contact/contact-list/contact-list.component.html
+++ b/src/app/contact/contact-list/contact-list.component.html
@@ -1,14 +1,12 @@
-<div *ngIf="contacts?.length >= 1; else noContacts" fxLayout="column" fxLayoutAlign="space-between center"  fxLayoutGap="30px">
+<div *ngIf="contacts?._items.length >= 1; else noContacts" fxLayout="column" fxLayoutAlign="space-between center"  fxLayoutGap="30px">
     <contact-list-item
-      *ngFor="let contact of contacts"
+      *ngFor="let contact of contacts._items"
         [contact]="contact"
         [edit]="editContact"
         [delete]="deleteContact"
         [mapsUpdate]="mapsUpdate"
         (click)="selectContact(contact)"></contact-list-item>
-   <div *ngIf="i < contacts.length-1">
-    <br>
-  </div>
+
   <p>Showing {{ contacts.length }} contact(s)</p>
 </div>
 
