--- a/contacts-app/src/app/app.component.html
+++ b/contacts-app/src/app/app.component.html
@@ -7,7 +7,7 @@
                 (select)="selectContact($event)"></contact-list>
 
   <button md-fab class="add-button"
-          (click)="contactDialog($event)">
+          (click)="contactDialog()">
     <md-icon>add</md-icon>
   </button>
 </div>
