--- a/contacts-app/src/app/contact/contact-dialog/contact-dialog.component.html
+++ b/contacts-app/src/app/contact/contact-dialog/contact-dialog.component.html
@@ -15,7 +15,7 @@
     <tr>
       <td>
         <md-input-container class="full-width">
-          <input mdInput name="age" [(ngModel)]="contact.age" min="0" max="120" placeholder="Age">
+          <input mdInput name="age" [(ngModel)]="contact.age" type="number" min="0" max="120" placeholder="Age">
         </md-input-container>
       </td>
     </tr>
